[package]
name = "coap-cli"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Tyler <gordon.tyler@synaptivemedical.com>"]
license = "MIT"
categories = ["command-line-utilities", "network-programming"]
description = "A simple command-line tool to send CoAP requests via UDP and display the responses."
keywords = ["coap", "cli"]
readme = "README.md"
repository = "https://bitbucket.org/gordon_tyler/coap-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.49", features = ["derive"] }
coap = "0.22.0"
coap-lite = "0.13.3"
regex = "1.12.2"
url = "2.5.7"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
